# geomcpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  flake.nix  geom-config.cmake.in  geomcpp-config.cmake.in  geomcpp.nix
include/geom/: fwd.hpp  geom.hpp  io.hpp  line.hpp  offset.hpp  origin.hpp  point.hpp  quad.hpp  rect.hpp  size.hpp
include/geomcpp/: io.hpp  ipoint.hpp  irect.hpp  isize.hpp  origin.hpp  point.hpp  rect.hpp  size.hpp
src/: line.cpp
src/math/: line.hpp
test/: fpoint_test.cpp  frect_test.cpp  fsize_test.cpp  io_test.cpp  ipoint_test.cpp  irect_test.cpp  isize_test.cpp  line_test.cpp  quad_test.cpp  toffset_test.cpp  tpoint_test.cpp  trect_test.cpp  tsize_test.cpp
